# try_cars

./: .env  .gitignore  Makefile  README.md  carro.txt  mail_valid.py  packages.txt  pyproject.toml  requirements-unins.txt  requirements.txt  settings.toml  teste.txt  testing.py
migrations/versions/: 027a9c09a30d_.py  29ab8d9ecb68_disable_trackable_user.py
tests/: base.py  conftest.py  database.py  homepage.py  registration.py  test_app.py
trycars/: app.py
trycars/blueprints/auth/: bp_auth.py  forms.py  token.py  validations.py  views.py
trycars/blueprints/development/: bp_dev.py  dev_bp.py  forms.py  views.py
trycars/blueprints/homepage/: bp_home.py  views.py
trycars/blueprints/webui/: views.py  webui.py
trycars/ext/auth/: login.py
trycars/ext/commands/: commands.py
trycars/ext/configuration/: configuration.py
trycars/ext/database/: database.py  migrations.py  models.py
trycars/ext/security/: security.py
trycars/templates/: base.html
trycars/templates/auth/: authentication.html  email_confirmation.html  login.html  register.html
trycars/templates/development/: captcha.html  first_form.html  upload.html
